@@ -1,3 +1,10 @@
+[B]Version 4.0.0[/B]
+- Rewritten in large part because of ruv.is website redesign
+- Now uses TV schedule format instead of groups
+- Better information about shows (duration, plot, episode number etc.)
+- Search feature
+- Much better podcast support
+
 [B]Version 3.2.0[/B]
 - Better cross platform support (switched to BeautifulSoup 4 from html5lib from lxml)
 - Removed the show index (since RÚV removed the recordings). (Added groups instead)
